# examen

./: Makefile  pyproject.toml  setup.cfg
notebooks/: 01 notebook.ipynb  01_eurosat.ipynb  02 notebook.ipynb  02_style detection_custom jax.ipynb  02_style detection_custom.ipynb  02_style_detection.ipynb  03_trax.ipynb  text.gin
src/: __init__.py  settings.py  typehinting.py
src/data/: data_tools.py  make_dataset.py
src/models/: attention.py  metrics.py  rnn.py  summary.py  traxmodel.py
src/training/: train_model.py
tune/20220619-1121/: events.out.tfevents.1655637674.ML-RefVm-812132.1887.0  events.out.tfevents.1655637702.ML-RefVm-812132.1887.1
tune/20220619-1124/: events.out.tfevents.1655637890.ML-RefVm-812132.1887.2
tune/20220619-1125/: events.out.tfevents.1655637908.ML-RefVm-812132.1887.3  events.out.tfevents.1655637939.ML-RefVm-812132.1887.4
tune/20220619-1135/: events.out.tfevents.1655638536.ML-RefVm-812132.1887.5  events.out.tfevents.1655638550.ML-RefVm-812132.1887.6
tune/20220619-1137/: events.out.tfevents.1655638662.ML-RefVm-812132.1887.7
tune/20220619-1146/: events.out.tfevents.1655639182.ML-RefVm-812132.1887.8
tune/20220619-1156/: events.out.tfevents.1655639778.ML-RefVm-812132.1887.9
tune/20220619-1159/: events.out.tfevents.1655639952.ML-RefVm-812132.1887.10  events.out.tfevents.1655639971.ML-RefVm-812132.1887.11
tune/20220619-1210/: events.out.tfevents.1655640622.ML-RefVm-812132.1887.12
tune/20220619-1215/: events.out.tfevents.1655640914.ML-RefVm-812132.1887.13
tune/20220620-0950/: saved_config.gin  (+1 more)
tune/20220621-2124/: config.gin
(+56 files in other folders)
