[tool.poetry]
name = "exam-22"
version = "0.1.0"
description = ""
authors = ["R.Grouls <raoul.grouls@businessdecision.nl>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
loguru = "^0.6.0"
tensorflow = "^2.9.1"
pandas = "^1.4.2"
torch = "^1.11.0"
jax = {extras = ["cpu"], version = "^0.3.13"}
tifffile = "^2022.5.4"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
feather-format = "^0.4.1"
torchtext = "^0.12.0"
gin-config = "^0.5.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
pytest = "^7.1.2"
pep8-naming = "^0.13.0"
flake8-annotations = "^2.9.0"
hypothesis = "^6.47.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
